--- a/help.me/app/src/main/res/layout/activity_settings.xml
+++ b/help.me/app/src/main/res/layout/activity_settings.xml
@@ -105,7 +105,8 @@
         android:text="Save"
         android:width="200sp"
         android:height="100sp"
-        android:background="@color/red"
+        android:textSize="30dp"
+        android:background="@color/green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
