--- a/help.me/app/src/main/res/layout/activity_life_threatening_amergency.xml
+++ b/help.me/app/src/main/res/layout/activity_life_threatening_amergency.xml
@@ -11,15 +11,17 @@
 
     <TextView
         android:id="@+id/question"
-        android:layout_width="351dp"
-        android:layout_height="223dp"
+        android:layout_width="330dp"
+        android:layout_height="219dp"
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="#ffff"
         android:textSize="50dp"
         app:layout_constraintBottom_toTopOf="@+id/yesButton"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="5dp"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <Button
         android:id="@+id/yesButton"
@@ -35,14 +37,12 @@
         app:layout_constraintEnd_toStartOf="@+id/noButton"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/question"
-        app:layout_constraintVertical_bias="0.766"/>
+        app:layout_constraintTop_toBottomOf="@+id/question"/>
 
     <Button
         android:id="@+id/noButton"
         android:layout_width="173dp"
         android:layout_height="226dp"
-        android:layout_marginBottom="40dp"
         android:width="165dp"
         android:height="180dp"
         android:background="@color/red"
@@ -53,7 +53,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/yesButton"
-        app:layout_constraintTop_toBottomOf="@+id/question"
-        app:layout_constraintVertical_bias="0.974"/>
+        app:layout_constraintTop_toBottomOf="@+id/question"/>
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp"/>
 
 </android.support.constraint.ConstraintLayout>
