--- a/help.me/app/src/main/res/layout/activity_resources.xml
+++ b/help.me/app/src/main/res/layout/activity_resources.xml
@@ -1,173 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#000"
-    tools:context="com.firstapp.helpme.ResourcesActivity">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             android:background="#000"
+                                             tools:context="com.firstapp.helpme.ResourcesActivity">
 
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="344dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="12dp"
         android:text="Resources"
         android:textAlignment="center"
         android:textColor="#FFFF"
         android:textSize="45sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintHorizontal_bias="0.002"
-        app:layout_constraintStart_toEndOf="@+id/guideline4"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.031" />
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guideline"/>
 
     <Button
         android:id="@+id/button"
         android:layout_width="155dp"
         android:layout_height="69dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="33dp"
+        android:background="@color/yellow"
         android:onClick="fracturesButtonClicked"
         android:text="Fractures"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.104"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.255" />
+        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintStart_toEndOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/textView"/>
 
     <Button
         android:id="@+id/button2"
         android:layout_width="155dp"
         android:layout_height="68dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="33dp"
+        android:background="@color/yellow"
         android:onClick="cutsButtonClicked"
         android:text="Cuts"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.93"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.254" />
+        app:layout_constraintStart_toEndOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/textView"/>
 
     <Button
         android:id="@+id/button3"
         android:layout_width="155dp"
         android:layout_height="68dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="13dp"
+        android:background="@color/yellow"
         android:onClick="burnsButtonClicked"
         android:text="Burns"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.104"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.418" />
+        app:layout_constraintEnd_toStartOf="@+id/button4"
+        app:layout_constraintStart_toEndOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/button"/>
 
     <Button
         android:id="@+id/button4"
         android:layout_width="155dp"
         android:layout_height="68dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="14dp"
+        android:background="@color/yellow"
         android:onClick="conscioussButtonClicked"
         android:text="Loss of Conscionsness"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.93"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/button2"/>
 
     <Button
         android:id="@+id/button5"
         android:layout_width="155dp"
         android:layout_height="68dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="17dp"
+        android:background="@color/yellow"
         android:onClick="cprButtonClicked"
         android:text="CPR"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.104"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.589" />
+        app:layout_constraintEnd_toStartOf="@+id/button6"
+        app:layout_constraintStart_toEndOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/button3"/>
 
     <Button
         android:id="@+id/button6"
         android:layout_width="155dp"
         android:layout_height="68dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="17dp"
+        android:background="@color/yellow"
         android:onClick="strokesButtonClicked"
         android:text="Strokes"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.93"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.589" />
+        app:layout_constraintStart_toEndOf="@+id/button5"
+        app:layout_constraintTop_toBottomOf="@+id/button4"/>
 
     <Button
         android:id="@+id/button7"
         android:layout_width="155dp"
         android:layout_height="68dp"
+        android:layout_marginEnd="34dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="18dp"
+        android:background="@color/yellow"
         android:onClick="crisisButtonClicked"
         android:text="Psychological Crisis"
-        app:layout_constraintBottom_toTopOf="@+id/button9"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.104"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5"
-        app:layout_constraintVertical_bias="0.514" />
+        app:layout_constraintEnd_toStartOf="@+id/button8"
+        app:layout_constraintStart_toEndOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/button5"/>
 
     <Button
         android:id="@+id/button8"
         android:layout_width="155dp"
         android:layout_height="68dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="18dp"
+        android:background="@color/yellow"
         android:onClick="poisoningButtonClicked"
         android:text="Poisoning"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.93"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        app:layout_constraintStart_toEndOf="@+id/button7"
+        app:layout_constraintTop_toBottomOf="@+id/button6"/>
 
     <Button
         android:id="@+id/button9"
         android:layout_width="155dp"
         android:layout_height="68dp"
+        android:layout_marginEnd="34dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="17dp"
+        android:background="@color/yellow"
         android:onClick="fluidsButtonClicked"
         android:text="Hazardons Fluids Into Eyes"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.104"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.931" />
+        app:layout_constraintEnd_toStartOf="@+id/button10"
+        app:layout_constraintStart_toEndOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/button7"/>
 
     <Button
         android:id="@+id/button10"
         android:layout_width="155dp"
         android:layout_height="68dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="17dp"
+        android:background="@color/yellow"
         android:onClick="seizuresButtonClicked"
         android:text="Seizures"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.93"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button8" />
+        app:layout_constraintStart_toEndOf="@+id/button9"
+        app:layout_constraintTop_toBottomOf="@+id/button8"/>
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="20dp" />
+        app:layout_constraintGuide_begin="20dp"/>
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
+        app:layout_constraintGuide_begin="20dp"/>
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
+        app:layout_constraintGuide_begin="20dp"/>
 </android.support.constraint.ConstraintLayout>
