--- a/help.me/app/src/main/res/layout/activity_results.xml
+++ b/help.me/app/src/main/res/layout/activity_results.xml
@@ -10,25 +10,43 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:text="TextView"
+        android:layout_width="381dp"
+        android:layout_height="97dp"
+        android:text="Here is Some\nInformation"
         android:textAlignment="center"
         android:textColor="@color/yellow"
         android:textSize="41dp"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="49dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        app:layout_constraintVertical_bias="1.0"/>
 
-    <TextView
-        android:id="@+id/help"
-        android:layout_width="305dp"
-        android:layout_height="412dp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/cuts"
-        android:textColor="#fff"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="28dp"/>
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_marginTop="110dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/help"
+                android:layout_width="340dp"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="16dp"
+                android:text="@string/walk"
+                android:textColor="#fff"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:layout_editor_absoluteX="28dp"/>
+        </LinearLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
