Damn I wrote a lot and cant remeber what it was. tied asf

--- a/help.me/app/src/main/res/layout/activity_main.xml
+++ b/help.me/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
 
     <Button
         android:id="@+id/saveButton"
+        android:onClick="saveButtonClicked"
         android:layout_width="279dp"
         android:layout_height="190dp"
         android:layout_marginBottom="100dp"
