--- a/help.me/app/src/main/res/layout/activity_results.xml
+++ b/help.me/app/src/main/res/layout/activity_results.xml
@@ -54,34 +54,47 @@
 
     <ImageView
         android:id="@+id/siren"
-        android:onClick="sirenClicked"
         android:layout_width="85dp"
         android:layout_height="66dp"
+        android:onClick="sirenClicked"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/scrollView2"
-        app:layout_constraintHorizontal_bias="0.779"
+        app:layout_constraintHorizontal_bias="0.766"
         app:layout_constraintStart_toEndOf="@+id/scrollView2"
-        app:srcCompat="@drawable/risenpic"
-        tools:layout_editor_absoluteY="593dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/risenpic"/>
 
     <ImageView
         android:id="@+id/flashLight"
-        android:onClick="flasLightCliced"
         android:layout_width="89dp"
         android:layout_height="81dp"
+        android:onClick="flasLightCliced"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/scrollView2"
         app:layout_constraintHorizontal_bias="0.229"
         app:layout_constraintStart_toEndOf="@+id/scrollView2"
-        app:srcCompat="@drawable/flashlight"
-        tools:layout_editor_absoluteY="593dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        app:layout_constraintVertical_bias="0.827"
+        app:srcCompat="@drawable/flashlight"/>
 
     <ImageView
         android:id="@+id/map"
-        android:onClick="mapClicked"
         android:layout_width="99dp"
         android:layout_height="56dp"
+        android:onClick="mapClicked"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintEnd_toStartOf="@+id/scrollView2"
         app:layout_constraintStart_toEndOf="@+id/scrollView2"
-        app:srcCompat="@drawable/mappic"
-        tools:layout_editor_absoluteY="587dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        app:layout_constraintVertical_bias="0.119"
+        app:srcCompat="@drawable/mappic"/>
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="20dp"/>
 
 </android.support.constraint.ConstraintLayout>
