--- a/help.me/app/src/main/res/layout/activity_contacts.xml
+++ b/help.me/app/src/main/res/layout/activity_contacts.xml
@@ -8,144 +8,96 @@
     tools:context="com.firstapp.helpme.SettingsActivity">
 
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="70dp"
-        android:layout_height="77dp"
-        app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
-        tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="26dp" />
-
-    <EditText
-        android:id="@+id/editText4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="John Doe"
-        android:textColor="#FFFFFF"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
-        tools:layout_editor_absoluteX="124dp" />
-
-    <EditText
-        android:id="@+id/editText7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="(123)456-8790"
-        android:inputType="phone"
-        android:text=""
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        tools:layout_editor_absoluteX="35dp" />
-
-    <Button
-        android:id="@+id/button12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:width="150sp"
-        android:height="70sp"
-        android:text="Edit"
-        tools:layout_editor_absoluteX="198dp"
-        tools:layout_editor_absoluteY="480dp" />
-
-    <EditText
-        android:id="@+id/editText8"
-        android:layout_width="wrap_content"
-        android:layout_height="44dp"
-        android:layout_marginTop="4dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="123 First St"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintTop_toBottomOf="@+id/textView10"
-        tools:layout_editor_absoluteX="35dp" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        tools:layout_editor_absoluteX="124dp"
-        tools:layout_editor_absoluteY="16dp" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Primary phone number"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        tools:layout_editor_absoluteX="35dp" />
-
-    <EditText
-        android:id="@+id/editText9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="(098)865-4321"
-        android:inputType="phone"
-        android:text=""
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"
-        tools:layout_editor_absoluteX="35dp" />
-
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Email"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/editText9"
-        tools:layout_editor_absoluteX="35dp" />
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:text="FAMILY"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textSize="30dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="88dp"/>
 
-    <EditText
-        android:id="@+id/editText6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="johndoe@email.com"
-        android:inputType="textEmailAddress"
-        android:text=""
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
-        tools:layout_editor_absoluteX="35dp" />
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="42dp"
+        android:layout_height="33dp"
+        app:srcCompat="@drawable/add"
+        tools:layout_editor_absoluteX="353dp"
+        tools:layout_editor_absoluteY="313dp"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="36dp"
+        android:layout_height="33dp"
+        app:srcCompat="@drawable/add"
+        tools:layout_editor_absoluteX="359dp"
+        tools:layout_editor_absoluteY="55dp"/>
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Secondary phone number"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/editText7"
-        tools:layout_editor_absoluteX="35dp" />
+        android:layout_width="409dp"
+        android:layout_height="54dp"
+        android:text="FRIENDS"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textSize="30dp"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="343dp"/>
+
+    <ImageView
+        android:id="@+id/imageView13"
+        android:layout_width="89dp"
+        android:layout_height="98dp"
+        app:srcCompat="@drawable/mom"
+        tools:layout_editor_absoluteX="48dp"
+        tools:layout_editor_absoluteY="143dp"/>
+
+    <ImageView
+        android:id="@+id/imageView14"
+        android:layout_width="88dp"
+        android:layout_height="93dp"
+        app:srcCompat="@drawable/dad"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="143dp"/>
+
+    <ImageView
+        android:id="@+id/imageView17"
+        android:layout_width="91dp"
+        android:layout_height="95dp"
+        app:srcCompat="@drawable/sister"
+        tools:layout_editor_absoluteX="277dp"
+        tools:layout_editor_absoluteY="143dp"/>
 
     <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Address"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/editText6"
-        tools:layout_editor_absoluteX="35dp" />
+        android:id="@+id/textView10"android:layout_width="102dp"
+        android:layout_height="51dp"
+        android:textAlignment="center"
+        android:text="Mom\nStatus: okay"
+        android:textColor="#fff"
+        tools:layout_editor_absoluteX="48dp"
+        tools:layout_editor_absoluteY="252dp"/>
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="102dp"
+        android:layout_height="51dp"
+        android:text="Dad\nStatus: Unkown "
+        android:textAlignment="center"
+        android:textColor="#fff"
+        tools:layout_editor_absoluteX="159dp"
+        tools:layout_editor_absoluteY="252dp"/>
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="102dp"
+        android:layout_height="51dp"
+        android:textAlignment="center"
+        android:text="Mom\nStatus: okay"
+        android:textColor="#fff"
+        tools:layout_editor_absoluteX="281dp"
+        tools:layout_editor_absoluteY="253dp"/>
+    
 
 </android.support.constraint.ConstraintLayout>
