--- a/help.me/app/src/main/res/layout/activity_contacts.xml
+++ b/help.me/app/src/main/res/layout/activity_contacts.xml
@@ -17,7 +17,7 @@
         android:textColor="#ffffff"
         android:textSize="30dp"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="88dp"/>
+        tools:layout_editor_absoluteY="49dp" />
 
     <ImageView
         android:id="@+id/imageView12"
@@ -25,7 +25,7 @@
         android:layout_height="33dp"
         app:srcCompat="@drawable/add"
         tools:layout_editor_absoluteX="353dp"
-        tools:layout_editor_absoluteY="313dp"/>
+        tools:layout_editor_absoluteY="269dp" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -33,18 +33,18 @@
         android:layout_height="33dp"
         app:srcCompat="@drawable/add"
         tools:layout_editor_absoluteX="359dp"
-        tools:layout_editor_absoluteY="55dp"/>
+        tools:layout_editor_absoluteY="16dp" />
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="409dp"
-        android:layout_height="54dp"
+        android:layout_width="407dp"
+        android:layout_height="42dp"
         android:text="FRIENDS"
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="30dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="343dp"/>
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="302dp" />
 
     <ImageView
         android:id="@+id/imageView13"
@@ -52,52 +52,89 @@
         android:layout_height="98dp"
         app:srcCompat="@drawable/mom"
         tools:layout_editor_absoluteX="48dp"
-        tools:layout_editor_absoluteY="143dp"/>
+        tools:layout_editor_absoluteY="104dp" />
 
     <ImageView
         android:id="@+id/imageView14"
-        android:layout_width="88dp"
-        android:layout_height="93dp"
+        android:layout_width="89dp"
+        android:layout_height="98dp"
         app:srcCompat="@drawable/dad"
         tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="143dp"/>
+        tools:layout_editor_absoluteY="104dp" />
 
     <ImageView
         android:id="@+id/imageView17"
-        android:layout_width="91dp"
-        android:layout_height="95dp"
+        android:layout_width="89dp"
+        android:layout_height="98dp"
         app:srcCompat="@drawable/sister"
-        tools:layout_editor_absoluteX="277dp"
-        tools:layout_editor_absoluteY="143dp"/>
+        tools:layout_editor_absoluteX="268dp"
+        tools:layout_editor_absoluteY="104dp" />
 
     <TextView
-        android:id="@+id/textView10"android:layout_width="102dp"
+        android:id="@+id/textView10"
+        android:layout_width="102dp"
         android:layout_height="51dp"
-        android:textAlignment="center"
         android:text="Mom\nStatus: okay"
+        android:textAlignment="center"
         android:textColor="#fff"
-        tools:layout_editor_absoluteX="48dp"
-        tools:layout_editor_absoluteY="252dp"/>
+        tools:layout_editor_absoluteX="35dp"
+        tools:layout_editor_absoluteY="218dp" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="102dp"
         android:layout_height="51dp"
-        android:text="Dad\nStatus: Unkown "
+        android:text="Dad\nStatus: Unknown "
         android:textAlignment="center"
         android:textColor="#fff"
-        tools:layout_editor_absoluteX="159dp"
-        tools:layout_editor_absoluteY="252dp"/>
+        tools:layout_editor_absoluteX="154dp"
+        tools:layout_editor_absoluteY="218dp" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="102dp"
         android:layout_height="51dp"
-        android:textAlignment="center"
         android:text="Mom\nStatus: okay"
+        android:textAlignment="center"
         android:textColor="#fff"
-        tools:layout_editor_absoluteX="281dp"
-        tools:layout_editor_absoluteY="253dp"/>
-    
+        tools:layout_editor_absoluteX="268dp"
+        tools:layout_editor_absoluteY="218dp" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="89dp"
+        android:layout_height="98dp"
+        app:srcCompat="@drawable/barack"
+        tools:layout_editor_absoluteX="35dp"
+        tools:layout_editor_absoluteY="344dp" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="88dp"
+        android:layout_height="43dp"
+        android:text="Barack\nStatus: Okay"
+        android:textAlignment="center"
+        android:textColor="#fff"
+        tools:layout_editor_absoluteX="35dp"
+        tools:layout_editor_absoluteY="458dp" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="89dp"
+        android:layout_height="98dp"
+        app:srcCompat="@drawable/savior"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="344dp" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="117dp"
+        android:layout_height="43dp"
+        android:text="Donald\nStatus: Fantastic"
+        android:textAlignment="center"
+        android:textColor="#fff"
+        tools:layout_editor_absoluteX="147dp"
+        tools:layout_editor_absoluteY="458dp" />
+
 
 </android.support.constraint.ConstraintLayout>
