changed contacts xml

--- a/help.me/app/src/main/res/layout/activity_contacts.xml
+++ b/help.me/app/src/main/res/layout/activity_contacts.xml
@@ -1,39 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#000000"
-    tools:context="com.firstapp.helpme.SettingsActivity">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             android:background="#000000"
+                                             tools:context="com.firstapp.helpme.SettingsActivity">
 
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="39dp"
         android:text="FAMILY"
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="30dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="49dp" />
+        app:layout_constraintBottom_toTopOf="@+id/imageView13"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"/>
 
     <ImageView
         android:id="@+id/imageView12"
         android:layout_width="42dp"
         android:layout_height="33dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.956"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/add"
-        tools:layout_editor_absoluteX="353dp"
-        tools:layout_editor_absoluteY="269dp" />
+        tools:layout_editor_absoluteY="257dp"/>
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="36dp"
         android:layout_height="33dp"
-        app:srcCompat="@drawable/add"
-        tools:layout_editor_absoluteX="359dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.957"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/add"/>
 
     <TextView
         android:id="@+id/textView9"
@@ -43,32 +52,44 @@
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="30dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="302dp" />
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView12"/>
 
     <ImageView
         android:id="@+id/imageView13"
         android:layout_width="89dp"
         android:layout_height="98dp"
-        app:srcCompat="@drawable/mom"
-        tools:layout_editor_absoluteX="48dp"
-        tools:layout_editor_absoluteY="104dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView10"
+        app:layout_constraintEnd_toStartOf="@+id/imageView14"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:srcCompat="@drawable/mom"/>
 
     <ImageView
         android:id="@+id/imageView14"
         android:layout_width="89dp"
         android:layout_height="98dp"
-        app:srcCompat="@drawable/dad"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="104dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView11"
+        app:layout_constraintEnd_toStartOf="@+id/imageView17"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imageView13"
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:srcCompat="@drawable/dad"/>
 
     <ImageView
         android:id="@+id/imageView17"
         android:layout_width="89dp"
         android:layout_height="98dp"
-        app:srcCompat="@drawable/sister"
-        tools:layout_editor_absoluteX="268dp"
-        tools:layout_editor_absoluteY="104dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView12"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imageView14"
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:srcCompat="@drawable/sister"/>
 
     <TextView
         android:id="@+id/textView10"
@@ -78,7 +99,7 @@
         android:textAlignment="center"
         android:textColor="#fff"
         tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="218dp" />
+        tools:layout_editor_absoluteY="206dp"/>
 
     <TextView
         android:id="@+id/textView11"
@@ -87,8 +108,10 @@
         android:text="Dad\nStatus: Unknown "
         android:textAlignment="center"
         android:textColor="#fff"
-        tools:layout_editor_absoluteX="154dp"
-        tools:layout_editor_absoluteY="218dp" />
+        app:layout_constraintEnd_toStartOf="@+id/textView12"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/textView10"
+        tools:layout_editor_absoluteY="206dp"/>
 
     <TextView
         android:id="@+id/textView12"
@@ -98,15 +121,18 @@
         android:textAlignment="center"
         android:textColor="#fff"
         tools:layout_editor_absoluteX="268dp"
-        tools:layout_editor_absoluteY="218dp" />
+        tools:layout_editor_absoluteY="206dp"/>
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="89dp"
         android:layout_height="98dp"
-        app:srcCompat="@drawable/barack"
-        tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="344dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        app:srcCompat="@drawable/barack"/>
 
     <TextView
         android:id="@+id/textView6"
@@ -115,16 +141,20 @@
         android:text="Barack\nStatus: Okay"
         android:textAlignment="center"
         android:textColor="#fff"
-        tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="458dp" />
+        tools:layout_editor_absoluteX="78dp"
+        tools:layout_editor_absoluteY="446dp"/>
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="89dp"
         android:layout_height="98dp"
-        app:srcCompat="@drawable/savior"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="344dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        app:layout_constraintVertical_bias="0.454"
+        app:srcCompat="@drawable/savior"/>
 
     <TextView
         android:id="@+id/textView7"
@@ -133,8 +163,10 @@
         android:text="Donald\nStatus: Fantastic"
         android:textAlignment="center"
         android:textColor="#fff"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="458dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/textView6"
+        tools:layout_editor_absoluteY="446dp"/>
 
 
 </android.support.constraint.ConstraintLayout>
